--- a/app/src/main/res/drawable/bg_radio.xml
+++ b/app/src/main/res/drawable/bg_radio.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:state_pressed="true">
+    <item android:state_checked="false">
         <shape>
-            <solid android:color="#3E9DE1"/>
+            <stroke android:color="#fff1f0" android:width="2dp"/>
             <corners android:radius="15dp"/>
         </shape>
     </item>
-    <item android:state_pressed="false">
+    <item android:state_checked="true">
         <shape>
-            <solid android:color="#6CB4E8"/>
+            <stroke android:color="#f5222d" android:width="2dp"/>
             <corners android:radius="15dp"/>
         </shape>
     </item>
