--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -81,4 +81,16 @@
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
         android:background="#f566ff"/>
+    <Button
+        android:id="@+id/btn_7"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="ListView"
+        android:textColor="#ffffff"
+        android:textSize="40sp"
+        android:textAllCaps="false"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:background="#69c0ff"/>
 </LinearLayout>
