--- a/app/src/main/res/layout/activity_grid_view.xml
+++ b/app/src/main/res/layout/activity_grid_view.xml
@@ -3,12 +3,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ListView
-        android:id="@+id/list_view1"
+    <GridView
+        android:id="@+id/grid_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:listSelector="@drawable/list_view"
-        android:divider="@color/colorGrey"
-        android:dividerHeight="2dp"/>
-
+        android:numColumns="3"
+        android:horizontalSpacing="10dp"
+        android:verticalSpacing="15dp"/>
 </LinearLayout>
