--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,8 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
-
     <color name="colorGrey">#595959</color>
+    <color name="colorGrey1">#ffffff</color>
+    <color name="colorGrey7">#8c8c8c</color>
+    <color name="colorBlack">#000000</color>
 </resources>
