--- a/myui/src/main/res/layout/activity_main.xml
+++ b/myui/src/main/res/layout/activity_main.xml
@@ -18,13 +18,20 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:background="@drawable/bg_username"
+            android:textSize="30sp"
             android:hint="Type something here"
             android:maxLines="2"/>
+
         <Button
             android:id="@+id/send"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Send"/>
+            android:text="Send"
+            android:background="@drawable/bg_username"
+
+
+            android:textSize="20sp" />
     </LinearLayout>
 
 
