--- a/app/src/main/res/layout/activity_recycler.xml
+++ b/app/src/main/res/layout/activity_recycler.xml
@@ -26,4 +26,26 @@
 
 
         />
+    <Button
+        android:id="@+id/btn_grid"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Grid视图"
+        android:textSize="20sp"
+        android:layout_marginTop="10dp"
+        android:background="#91d5ff"
+
+
+        />
+    <Button
+        android:id="@+id/btn_stagger"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="瀑布流"
+        android:textSize="20sp"
+        android:layout_marginTop="10dp"
+        android:background="#d3f261"
+
+
+        />
 </LinearLayout>
