--- a/app/src/main/res/layout/layout_stagger_item.xml
+++ b/app/src/main/res/layout/layout_stagger_item.xml
@@ -4,9 +4,10 @@
     android:layout_height="wrap_content">
 
     <TextView
+        android:layout_margin="5dp"
         android:id="@+id/text_view_item"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
         android:text="hello"
         android:background="@color/colorGrey1"
         android:textSize="20sp"/>
