--- a/Fragment/src/main/res/layout-large/activity_main.xml
+++ b/Fragment/src/main/res/layout-large/activity_main.xml
@@ -2,27 +2,19 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal"
-    >
-
+    android:orientation="horizontal">
     <fragment
         android:id="@+id/left_fragment"
         android:name="com.example.fragment.LeftFragment"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
+        android:layout_weight="1"
         />
-    <!--<fragment
-        android:id="@+id/right_fragment"
+    <fragment
+        android:id="@+id/right_layout"
         android:name="com.example.fragment.RightFragment"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="1"/>-->
-    <!--<FrameLayout
-        android:id="@+id/right_layout"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1">
-
-    </FrameLayout>-->
+        android:layout_weight="3"/>
 
 </LinearLayout>
