--- a/Fragmentapplication/src/main/res/layout/news_content_frag.xml
+++ b/Fragmentapplication/src/main/res/layout/news_content_frag.xml
@@ -26,13 +26,14 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:padding="15dp"
+            android:padding="30dp"
+            android:textColor="#E60B0B"
             android:textSize="18sp"/>
     </LinearLayout>
     <View
-        android:layout_width="1dp"
+        android:layout_width="15dp"
         android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
-        android:background="#000"/>
+        android:background="#16A775"/>
 
 </RelativeLayout>
