--- a/Fragmentapplication/src/main/res/layout/news_item.xml
+++ b/Fragmentapplication/src/main/res/layout/news_item.xml
@@ -2,7 +2,8 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:id="@+id/new_title_item"
+    android:id="@+id/news_title_item"
+
     android:singleLine="true"
     android:ellipsize="end"
     android:textSize="18sp"
@@ -11,5 +12,4 @@
     android:paddingTop="15dp"
     android:paddingBottom="15dp"
     >
-
 </TextView>
