--- a/app/src/main/res/layout/activity_web_view.xml
+++ b/app/src/main/res/layout/activity_web_view.xml
@@ -3,16 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".WebViewActivity">
 
-<Button
-    android:id="@+id/btn"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:text="Send Broadcast"
-    android:textAllCaps="false"
-    />
+    <WebView
+        android:id="@+id/webview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
+    </WebView>
 
 </LinearLayout>
