--- a/app/src/main/res/layout/layout_dialog.xml
+++ b/app/src/main/res/layout/layout_dialog.xml
@@ -3,6 +3,23 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+    <ImageButton
+        android:id="@+id/dialog_imagebutton"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:background="#fff"
+        android:scaleType="fitCenter"
+        android:layout_gravity="end"
+        android:layout_margin="20dp"
+        android:src="@drawable/close"/>
+    <TextView
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:textSize="25sp"
+        android:layout_marginBottom="30dp"
+        android:text="请登录"/>
 
     <EditText
         android:id="@+id/dialog_username"
@@ -25,5 +42,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Submit"
+        android:textSize="22sp"
+        android:textStyle="bold"
+        android:background="#7CC3F1"
         android:textAllCaps="false"/>
 </LinearLayout>
