--- a/mutiactivity/src/main/res/layout/activity_head.xml
+++ b/mutiactivity/src/main/res/layout/activity_head.xml
@@ -6,8 +6,14 @@
     tools:context=".HeadActivity">
 
     <GridView
+        android:id="@+id/gridview"
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:horizontalSpacing="3dp"
+        android:verticalSpacing="3dp"
+        android:numColumns="4"
+        >
 
     </GridView>
 
