--- a/mutiactivity/src/main/res/layout/activity_head.xml
+++ b/mutiactivity/src/main/res/layout/activity_head.xml
@@ -3,16 +3,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".HeadActivity">
 
     <GridView
         android:id="@+id/gridview"
-        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:horizontalSpacing="3dp"
-        android:verticalSpacing="3dp"
-        android:numColumns="4"
+        android:layout_height="wrap_content"
+        android:numColumns="2"
+
+        android:gravity="center"
+        android:verticalSpacing="5dp"
+        android:horizontalSpacing="5dp"
         >
 
     </GridView>
