--- a/wechat/src/main/res/layout/activity_main.xml
+++ b/wechat/src/main/res/layout/activity_main.xml
@@ -1,22 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_height="match_parent"
+    android:id="@+id/layout_main"
     tools:context=".MainActivity">
-<fragment
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_weight="1"
+        android:layout_height="match_parent">
+        <fragment
 
-    android:id="@+id/fragment_base"
-    android:name="com.example.wechat.Fragment_base"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_weight="1"/>
+            android:id="@+id/fragment_base"
+            android:name="com.example.wechat.Fragment_base"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            />
+    </FrameLayout>
+
 
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_gravity="bottom"
+        android:layout_alignParentBottom="true"
         android:layout_height="wrap_content">
         <Button
             android:id="@+id/btn1"
@@ -48,4 +56,4 @@
             android:text="我"/>
     </LinearLayout>
 
-</LinearLayout>
+</RelativeLayout>
