--- a/wechat/src/main/res/layout/layout_frag1.xml
+++ b/wechat/src/main/res/layout/layout_frag1.xml
@@ -5,6 +5,7 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="1"/>
+        android:layout_height="match_parent"
+        android:text="1"
+        android:background="#000"/>
 </LinearLayout>
