--- a/wechat/src/main/res/layout/layout_frag2.xml
+++ b/wechat/src/main/res/layout/layout_frag2.xml
@@ -5,6 +5,7 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="2"/>
+        android:layout_height="match_parent"
+        android:text="2"
+        android:background="#980"/>
 </LinearLayout>
