--- a/wechat/src/main/res/layout/activity_main.xml
+++ b/wechat/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:orientation="vertical"
@@ -7,16 +7,15 @@
     android:id="@+id/layout_main"
     tools:context=".MainActivity">
     <FrameLayout
+        android:id="@+id/fragment_container"
         android:layout_width="match_parent"
         android:layout_weight="1"
         android:layout_height="match_parent">
-        <fragment
-
-            android:id="@+id/fragment_base"
-            android:name="com.example.wechat.Fragment_base"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            />
+        <!--<fragment-->
+            <!--android:id="@+id/Fragment_base"-->
+            <!--android:name="com.example.wechat.Fragment_base"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent"/>-->
     </FrameLayout>
 
 
@@ -32,6 +31,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:textSize="18sp"
+            android:background="#D4D5D5"
             android:text="微信"/>
         <Button
             android:id="@+id/btn2"
@@ -39,6 +39,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:textSize="18sp"
+            android:background="#D4D5D5"
+
             android:text="通讯录"/>
         <Button
             android:id="@+id/btn3"
@@ -46,6 +48,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:textSize="18sp"
+            android:background="#D4D5D5"
+
             android:text="发现"/>
         <Button
             android:id="@+id/btn4"
@@ -53,7 +57,9 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:textSize="18sp"
+            android:background="#D4D5D5"
+
             android:text="我"/>
     </LinearLayout>
 
-</RelativeLayout>
+</LinearLayout>
