--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -165,10 +165,11 @@
             android:layout_marginTop="10dp"
             android:layout_marginRight="5dp"
             android:background="#881FCC"
-            android:text="AlertDialog"
+            android:text="Dialog"
             android:textAllCaps="false"
             android:textColor="#ffffff"
             android:textSize="30sp" />
+
         <Button
             android:id="@+id/btn_14"
             android:layout_width="match_parent"
@@ -178,6 +179,19 @@
             android:layout_marginRight="5dp"
             android:background="#A3264E"
             android:text="Event"
+            android:textAllCaps="false"
+            android:textColor="#ffffff"
+            android:textSize="30sp" />
+
+        <Button
+            android:id="@+id/btn_15"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="5dp"
+            android:background="#B9643D"
+            android:text="PopupWindow"
             android:textAllCaps="false"
             android:textColor="#ffffff"
             android:textSize="30sp" />
