--- a/app/src/main/res/layout/activity_handler.xml
+++ b/app/src/main/res/layout/activity_handler.xml
@@ -2,16 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:orientation="vertical"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".handler.HandlerActivity">
 
-    <EditText
-        android:id="@+id/edit"
-        android:layout_margin="10dp"
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Type Something Here!"
-        />
-
+        android:layout_height="match_parent"
+        android:text="这是Handler"
+        android:textSize="30sp"
+        android:gravity="center"/>
 </LinearLayout>
