--- a/app/src/main/res/layout/activity_sqlite.xml
+++ b/app/src/main/res/layout/activity_sqlite.xml
@@ -1,43 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".data.DataMainActivity">
+    >
 
     <Button
-        android:id="@+id/btn_data_1"
-        android:layout_margin="3dp"
+        android:id="@+id/create_database"
         android:layout_width="match_parent"
+        android:textAllCaps="false"
         android:layout_height="wrap_content"
-        android:text="文件存储"/>
+        android:text="Create Database"
+
+        />
     <Button
-        android:id="@+id/btn_data_2"
-        android:layout_margin="3dp"
+        android:id="@+id/add_data"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAllCaps="false"
-        android:text="SharedPreferences"/>
+        android:text="Add Data"
+
+        />
     <Button
-        android:id="@+id/btn_data_3"
-        android:layout_margin="3dp"
+        android:id="@+id/update_data"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAllCaps="false"
-        android:text="记住密码"/>
+        android:text="Update Data"
+
+        />
     <Button
-        android:id="@+id/btn_data_4"
-        android:layout_margin="3dp"
+        android:id="@+id/delete_data"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAllCaps="false"
-        android:text="SQLite"/>
+        android:text="Delete Data"
+
+        />
     <Button
-        android:id="@+id/btn_data_5"
-        android:layout_margin="3dp"
+        android:id="@+id/query_data"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAllCaps="false"
-        android:text="LitePal"/>
+        android:text="Query Data"
+
+        />
+
 </LinearLayout>
